<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dip"
    android:orientation="vertical"
    tools:context=".PointsActivity" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Puntuacion_Inicial"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/lblPuntos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:textAlignment="viewEnd"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Puntiacion_actual" />

    <TextView
        android:id="@+id/lblActual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:textAlignment="viewEnd" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Criticos_Realizados" />

    <EditText
        android:id="@+id/txtCriticos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Ej. EC2, E3..."
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Criticos_Recibidos" />

    <EditText
        android:id="@+id/txtRecibidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Ej. EC, EAC..."
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Piezas_Conseguidas" />

    <EditText
        android:id="@+id/txtPiezas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Ej. 1, 10, 5..."
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sortilegios_Realizados" />

    <EditText
        android:id="@+id/txtMagias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Ej. 1, 10, 5..."
        android:inputType="textPersonName"
        android:singleLine="true" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Otros_Puntos" />

    <EditText
        android:id="@+id/txtOtros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="100, 234, 34"
        android:singleLine="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:clickable="true"
        android:onClick="darPuntos"
        app:srcCompat="@android:drawable/ic_menu_add" />

</LinearLayout>